fix: 修复一系列bug,添加vue-router支持等
1.feat 使用vue-router的hook来暂时显示或隐藏,若项目未使用vue-router则仍在insert和unbind中控制
2.feat 隐藏添加定时器,使多图片隐藏显示过程更顺滑
3.feat 可以监测容器元素的尺寸变化
4.fix 显示右键菜单时,即使mousemove到新的图片也应隐藏
5.note 图片延迟显示是因为大图下载需要时间,在未下载前mousemove是不会显示
6.fix? 右键菜单弹窗时,有几率出现一个空的图框
7.refactor 删除注释,vueconfig无用信息
8.docs readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-img-hover-zoom-in",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "private": false,
   "main": "./dist/vue-img-hover-zoom-in.common.js",
   "files": [
@@ -17,6 +17,7 @@
     "build-lib": "vue-cli-service build --target lib ./src/plugin/index.js"
   },
   "dependencies": {
+    "resize-observer-polyfill": "^1.5.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
@@ -54,5 +55,14 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "homepage": "https://github.com/guidetheorient/vue-img-hover-zoom-in#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/guidetheorient/vue-img-hover-zoom-in"
+  },
+  "bugs": {
+    "url": "https://github.com/guidetheorient/vue-img-hover-zoom-in/issues"
+  },
+  "license": "MIT"
 }
